mobile font correction, icon align improvement

--- a/css/style.css
+++ b/css/style.css
@@ -181,26 +181,31 @@ input::-webkit-input-placeholder {
   color: yellow;
   opacity: .6;
   font-size: 2rem;
+  
 }
 
 input:-ms-input-placeholder {
   color: yellow;
   opacity: .6;
+  font-style: italic;
 }
 
 input::-ms-input-placeholder {
   color: yellow;
   opacity: .6;
+  font-style: italic;
 }
 
 input::-moz-placeholder {
   color: yellow;
   opacity: .6;
+  font-style: italic;
 }
 
 input::placeholder {
   color: yellow;
   opacity: .6;
+  font-style: italic;
 }
 
 input:focus {
@@ -290,10 +295,24 @@ footer {
 }
 
 @media (max-width: 548px) {
+  .load {
+    font-size: 1rem;
+  }
+
+  input::placeholder {
+    font-size: 1.2rem;
+  }
+  
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
   .city {
     font-size: 2.25rem;
     margin-top: 20px;
+    margin-bottom: 0;
   }
+  
   img.svg {
     height: 75px;
   }
